syntax = "proto3";

package libresvip;

enum PluginCategory {
  INPUT = 0;
  OUTPUT = 1;
  MIDDLEWARE = 2;
}

enum ConversionMode {
  DIRECT = 0;
  SPLIT = 1;
  MERGE = 2;
}

message PluginInfo {
  string identifier = 1;
  string name = 2;
  string version = 3;
  string description = 4;
  string author = 5;
  string website = 6;
  string json_schema = 7;
  // additional fields for io plugins
  string file_format = 8;
  repeated string suffixes = 9;
  string icon_base64 = 10;
}

message PluginInfosRequest {
    PluginCategory category = 1;
    string language = 2;
}

message PluginInfosResponse {
  repeated PluginInfo values = 1;
}

message ConversionRequest {
  string input_format = 1;
  string output_format = 2;
  ConversionMode mode = 3;
  int32 max_track_count = 4;
  map<string, bytes> files = 5;
  string input_options = 6;
  string output_options = 7;
  map<string, string> middleware_options = 8;
}

message SingleConversionResult {
  string filename = 1;
  bool success = 2;
  repeated bytes file_contents = 3;
  string error_message = 4;
  string warning_message = 5;
}

message ConversionResponse {
  repeated SingleConversionResult results = 1;
}

//
service Conversion {
  //
  rpc PluginInfos(PluginInfosRequest) returns (PluginInfosResponse);
  //
  rpc Convert(ConversionRequest) returns {ConversionResponse};
}
